# mutils

./: CMakeLists.txt
include/mutils/: abstractresourcemanager.hpp  algorithm.hpp  assert.hpp  collision.hpp  observed.hpp  observer.hpp  stringutils.hpp  variant.hpp  vec2.hpp
src/: algorithm.cpp  collision.cpp  observed.cpp  stringutils.cpp  variant.cpp  vec2.cpp
